Prevent gap at the top for notes, asides and footers
This was previously only available for <aside>, but should be used for
other block elements as well.

--- a/content/assets/styles/_aside.scss
+++ b/content/assets/styles/_aside.scss
@@ -5,10 +5,3 @@ aside {
 	border-top:    $background-pre solid thin;
 	border-bottom: $background-pre solid thin;
 }
-
-// This prevents a large gap, when the first element has a large margin to the
-// top. The padding to the top is done inside the aside, but if padding is
-// used, the margin of the inner element is also applied.
-aside > *:first-child {
-	margin-top:  0;
-}
