--- a/content/assets/styles/master.scss
+++ b/content/assets/styles/master.scss
@@ -4,3 +4,11 @@
 @import "aside";
 @import "footer";
 @import "note";
+
+// Prevent the large gap, that is caused by the top margin of the first
+// elements inside block elements.
+article.note > *:first-child,
+aside        > *:first-child,
+footer       > *:first-child {
+	margin-top:  0;
+}
